--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@react-google-maps/api": "^2.19.3",
     "@react-three/fiber": "^8.17.7",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
